working synapse conf

--- a/puppet/modules/synapse/files/synapse.json.conf
+++ b/puppet/modules/synapse/files/synapse.json.conf
@@ -1,23 +1,18 @@
 {
   "services": {
-    "nodesrv": {
+    "georiot_service": {
       "discovery": {
         "method": "etcd",
-        "servers": [
-          {
-            "name": "localhost",
-            "host": "localhost"
-          }
-        ],
-        "container_port": 8080,
-        "image_name": "local/georiot_service"
+        "host": "localhost",
+        "path": "/service/",
+        "port": 4001
       },
       "haproxy": {
         "port": 80,
         "listen": [
           "mode http",
-          "option httpchk /",
-          "http-check expect string Hello"
+          "option httpchk GET /hello/test?format=json",
+          "http-check expect status 200"
         ]
       }
     }
@@ -29,14 +24,27 @@
     "do_reloads": true,
     "global": [
       "chroot /var/lib/haproxy",
+      "stats socket /var/run/haproxy.stats",
       "user haproxy",
       "group haproxy",
       "daemon"
     ],
     "defaults": [
-      "contimeout 5000",
-      "clitimeout 50000",
-      "srvtimeout 50000"
-    ]
+      "timeout connect 5000",
+      "timeout client 50000",
+      "timeout server 50000"
+    ],
+     "extra_sections": {
+      "listen stats :8888": [
+        "mode http",
+        "stats enable",
+        "stats hide-version",
+        "stats uri /",
+        "stats realm dwww1\ statistics",
+        "stats auth admin:g4m30n",
+        "stats refresh 15s",
+        "stats admin if TRUE"
+     ]
+    }
   }
 }
